subida de el login funcional

--- a/SDR/app/template/dependecias/js.html
+++ b/SDR/app/template/dependecias/js.html
@@ -1,7 +1,3 @@
 {% load staticfiles %}
-<script src="{% static 'archivos/js/angular.js' %}"></script>
-<script src="{% static 'archivos/js/angular-animate.js' %}"></script>
-<script src="{% static 'archivos/js/angular-touch.js' %}"></script>
-<script src="{% static 'archivos/js/angular-sanitize.js' %}"></script>
-<script src="{% static 'archivos/js/angular-cookies.js' %}"></script>
-<script src="{% static 'archivos/js/ui-bootstrap-tpls-1.2.4.js' %}"></script>
+<script type="text/javascript" src='{% static "archivos/js/jquery-2.1.1.js"%}'></script>
+<script type="text/javascript" src='{% static "archivos/js/bootstrap.js"%}'></script>
