--- a/SDR/app/template/dependecias/js.html
+++ b/SDR/app/template/dependecias/js.html
@@ -1,3 +1,4 @@
 {% load staticfiles %}
 <script type="text/javascript" src='{% static "archivos/js/jquery-2.1.1.js"%}'></script>
 <script type="text/javascript" src='{% static "archivos/js/bootstrap.js"%}'></script>
+<script type="text/javascript" src="{% static 'js/menu.js' %}"></script>
