--- a/SDR/app/template/menus/menu_principal.html
+++ b/SDR/app/template/menus/menu_principal.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -11,8 +11,9 @@
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+     {% if request.user.groups.all.0.id == 1 %}
       <ul class="nav navbar-nav">
-        <li class="active dropdown">
+        <li class="dropdown" id="inv">
              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Inventarios <span class="caret"></span></a>
         	<ul  class="dropdown-menu" role="menu">
         		<li><a href="#"> Nuevo Inventario </a></li>
@@ -20,10 +21,10 @@
         		<li><a href="#"> Ver Inventarios </a></li>
         	</ul>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" id='conf'>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Configuración <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Nuevo Usuario</a></li>
+            <li><a href="/menu/nuevo-usuario">Nuevo Usuario</a></li>
             <li class="divider"></li>
             <li><a href="#">Consultar Usuarios</a></li>
             <li class="divider"></li>
@@ -31,10 +32,10 @@
           </ul>
         </li>
       </ul>
-
+      {% endif %}
       <ul class="nav navbar-nav navbar-right">
-      	<li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{request.user.first_name}} {{request.user.last_name}}<span class="caret"></span></a>
+      	<li class="dropdown" id='user'>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{request.user.get_full_name}}<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Editar Perfil</a></li>
             <li class="divider"></li>
