--- a/SDR/app/template/dependecias/css.html
+++ b/SDR/app/template/dependecias/css.html
@@ -1,3 +1,4 @@
 {% load staticfiles %}
 <link rel="stylesheet" href="{% static 'archivos/css/bootstrap.css' %}">
 <link rel="stylesheet" href="{% static 'archivos/font-awesome/css/font-awesome.css' %}">
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
