--- a/SDR/app/template/login/login.html
+++ b/SDR/app/template/login/login.html
@@ -22,38 +22,40 @@
         <div id="sms-alert">
             
         </div>
-        <div style="padding: 40px"></div>
+        <div style="padding: 70px"></div>
         <div class="container">
         	<div class="row">
         		<div class="col-sm-12">
         			<div class="col-sm-3"></div>
         			<div class="col-sm-6">
-        				<form class="form-horizontal" id="form-login">{% csrf_token %}
-        					<fieldset>
-        						<legend><i class='fa fa-user'></i> Login</legend>
-        						<div class='form-group'>
-        							<label class="col-sm-12">Nombre o Correo</label>
-        							<div class="col-sm-12"> 
-        								<input type="text" name='username' id='username' required class="form-control" placeholder="Ingrese nombre o correo" maxlength="30" min="5"> 
-        							</div>
-        						</div>
-        						<div class='form-group'>
-        							<label class="col-sm-12">Contraseña</label>
-        							<div class="col-sm-12"> 
-        								<input type="password" name='password' id='password' required class="form-control" placeholder="Ingrese contraseña" maxlength="15" min="6"> 
-        							</div>
-        						</div>
-       						 	<div class='form-group'>
-                                    <div class="col-sm-12">
-                                        <div class="pull-right">
-	       						 	        <button class="btn btn-default" type="reset">Limpiar</button>
-	       						 	        &nbsp;
-	       						 	        <button class="btn btn-info">Enviar</button>
-                                        </div>
-                                    </div>   
-       						 	</div>
-        					</fieldset>
-        				</form>
+                        <div class="well bs-component">
+            				<form class="form-horizontal" role="form" id="form-login">{% csrf_token %}
+            					<fieldset>
+            						<legend><i class='fa fa-user'></i> Login</legend>
+            						<div class='form-group'>
+            							<label class="col-sm-12">Nombre o Correo</label>
+            							<div class="col-sm-12"> 
+            								<input type="text" name='username' id='username' required class="form-control" placeholder="Ingrese nombre o correo" maxlength="30" min="5"> 
+            							</div>
+            						</div>
+            						<div class='form-group'>
+            							<label class="col-sm-12">Contraseña</label>
+            							<div class="col-sm-12"> 
+            								<input type="password" name='password' id='password' required class="form-control" placeholder="Ingrese contraseña" maxlength="15" min="6"> 
+            							</div>
+            						</div>
+           						 	<div class='form-group'>
+                                        <div class="col-sm-12">
+                                            <div class="pull-right">
+    	       						 	        <button class="btn btn-default" type="reset">Limpiar</button>
+    	       						 	        &nbsp;
+    	       						 	        <button class="btn btn-info">Enviar</button>
+                                            </div>
+                                        </div>   
+           						 	</div>
+            					</fieldset>
+            				</form>
+                        </div>    
         			</div>
         			<div class="col-sm-3"></div>
         		</div>
