--- a/SDR/app/template/configuracion/search-user.html
+++ b/SDR/app/template/configuracion/search-user.html
@@ -14,52 +14,21 @@
 		<div style="padding:25px"></div>
 		<section class="row" style="margin:0">
 			<div class="col-sm-12">
-				<table class="table table-striped table-hover">
-				  	<thead>
-				    	<tr>
-							<th>#</th>
-							<th>Nombre y Apellido</th>
-							<th>Nombre de Usuario</th>
-							<th>Email</th>
-							<th>Grupo</th>
-							<th>Fecha de Registro</th>
-							<th>Ultimo Login</th>
-							<th>Acciones</th>
-				    	</tr>
-				  	</thead>
-					<tbody>
-						{% for tabla in pagination %}
-							<tr>
-								<td>{{tabla.user.id}}</td>
-								<td>{{tabla.user.first_name}} {{tabla.user.last_name}}</td>
-								<td>{{tabla.user.username}}</td>
-								<td>{{tabla.user.email}}</td>
-								<td>{{tabla.group.name}}</td>
-								<td>{{tabla.user.date_joined}}</td>
-								<td>{{tabla.user.last_login}}</td>
-								<td colspan="3">
-									<i class="fa fa-edit cursor" title="Seleccionar"></i>
-									{% if tabla.user.is_active == 1%}
-										<i class="fa fa-power-off cursor green" title="Desactivar"></i>
-									{%else%}
-										<i class="fa fa-power-off cursor red" title="Activar"></i>
-									{%endif%}
-									<i class="fa fa-remove cursor red" title='Eliminar Usuario'></i>
-								</td>
-							</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-				<ul class="pagination pull-right">
-					{% if pagination.has_previous %}
-						<li><a href="?page={{ pagination.previous_page_number }}">«Atrás</a></li>
-					{% endif %}
-					{% if pagination.has_next %}
-			            <li><a href="?page={{ pagination.next_page_number }}">Siguiente»</a></li>
-			        {% endif %}
-				</ul>
+				<div class="col-sm-2">
+					<select id="select-rol" class="form-control">
+						<option value="">[Seleccione]</option>
+					</select>
+				</div>
+				<div class="col-sm-4">
+					<input type="text" class="form-control" placeholder="Buscar por Nombre">
+				</div>
+			</div>
+			<div style="padding:30px"></div>
+			<div class="col-sm-12" id='id_tabla'>
+			
 			</div>
 		</section>		
 	</body>
 		{% include 'dependecias/js.html'%}
+		<script type="text/javascript" src="{% static 'js/tabla-user.js'%}"></script>
 </html>		
