--- a/SDR/app/template/menus/menu_principal.html
+++ b/SDR/app/template/menus/menu_principal.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-     {% if request.user.groups.all.0.id == 1 %}
+     {% if request.user.groups.all.0.id == 1 or request.user.groups.all.0.id == 2 %}
       <ul class="nav navbar-nav">
         <li class="dropdown" id="inv">
              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Inventarios <span class="caret"></span></a>
